====================

2.1.1 - XX/XX/XXXX
------------------

* **Updated Theme Blvd framework to 2.6.1**
* New: Added option to hide bounding border for transparent header of "Agent" base; see *Appearance > Theme Options > Styles > Transparent Header*.
* New: Added option to disable theme's WooCommerce floating shopping cart; see *Appearance > Theme Options > Plugins > WooCommerce*.
* Improvement: Better handling of pulling default value for new option, when theme options have already been saved (i.e. smoother updates when the theme adds new options, which you haven't configured).
* Improvement: Allow unfiltered HTML when saving text and textareas.
* Improvement: De-enqueued `theme.js`, no longer needed with framework 2.6+.
* Improvement: When page title is hidden on full-width or full-screen featured image, image is now 100% opacity.
* Improvement: Removed dark form field styling when in an area with a dark background color; it causes messy CSS and too many plugin conflicts.
* Fixed: Footer columns not pulling page content.
* Fixed: Post showcase filtering not correctly effecting corresponding lightbox gallery.
* Fixed: Time ago date formatting not calculated correctly when time zone changed from GMT-0.
* Fixed: Self-hosted background video not looping in some browsers.
* Fixed: Titles not showing below lightbox video popups.
* Fixed: Redirect page template not redirecting properly.
* Fixed: Bug with `h2` HTML tag font styling on mobile.
* Fixed: Bug with self-hosted WordPress videos not displaying after full-screen exit in some browsers.
* Fixed: Header toolbar divider not matching header height with all logo sizes on "Agent" base.

--------------------------------------------------------------

2.1.0 - 05/05/2016
------------------

*Warning: Make sure to read this article before updating: [Updating to Jump Start 2.1](http://news.themeblvd.com/2016/05/05/updating-to-jump-start-2-1/)*

* **Updated Theme Blvd framework to 2.6.0**